--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -17,9 +17,8 @@
     flex-wrap: wrap;
     align-content: baseline;
     justify-content: start;
-    @media only screen and (max-width: 800px) {
-      justify-content: center;
-      width: 95%;
+    @media only screen and (max-width: 1160px) {
+      width: 103%;
     }
   }
   &__card {
@@ -39,13 +38,14 @@
     &:hover &-icon {
       fill: $color-service-card-title;
     }
-    @media only screen and (max-width: 998px) {
+    @media only screen and (max-width: 1160px) {
+      flex-basis: 46%;
+    }
+    @media only screen and (max-width: 940px) {
       flex-basis: 45%;
-      margin: 1.5rem;
     }
     @media only screen and (max-width: 800px) {
       flex-basis: 100%;
-      margin: 1rem;
     }
   }
   &__card-icon {
@@ -54,10 +54,6 @@
     width: 2.5rem;
     margin-bottom: 1rem;
     transition: $primary-transition;
-    @media only screen and (max-width: 998px) {
-      height: 4rem;
-      width: 4rem;
-    }
   }
   &__card-h4 {
     position: relative;
